<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".activities.Activity_Login">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scrollbarThumbVertical="@null"
        android:layout_centerInParent="true"
        >






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="80dp">


                <ImageView
                    android:id="@+id/login_IMG_logo"
                    android:layout_marginTop="50sp"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30sp"
                    />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_EDT_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textAlignment="viewStart"
                        android:hint="@string/email"/>



                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_EDT_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:maxLength="30"
                        android:hint="@string/password"
                        android:inputType="textPassword"

                        />





                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_BTN_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_below="@+id/login_LYO_RL"
                    android:id="@+id/login_LBL_createCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:gravity="center"
                    android:text="@string/createNewCode"
                    android:textSize="@dimen/regularTextSize" />

            </LinearLayout>







    </ScrollView>


</RelativeLayout>