<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layoutDirection="rtl">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:helperText="מלאו את שם האירוע"
        app:helperTextEnabled="true"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addAlbum_EDT_eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eventName"
            android:inputType="text"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/addAlbum_RB_chooseCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectCode" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addAlbum_LYO_userCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/shareCodeSecretly"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:textSize="15sp"
        android:visibility="gone"
        app:helperText="הזינו קוד סודי איתו האורחים שלכם יכנסו"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addAlbum_EDT_userCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/addAlbum_RB_automaticCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="קוד סודי יבחר אוטומית" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addAlbum_LYO_automaticCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/shareCodeSecretly"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:textSize="15sp"
        app:helperText="קוד זה ישמש את האורחים לכניסה לאלבום"
        app:helperTextEnabled="true"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addAlbum_EDT_automaticCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/addAlbum_BTN_addAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addAlbum" />
    <ProgressBar
        android:id="@+id/addAlbum_PB_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>