<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".activities.Activity_Register">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scrollbarThumbVertical="@null">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/register_LBL_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp"
                android:text="@string/register"
                android:textSize="@dimen/titleTextSize" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/register_LBL_enterDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_LBL_register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5sp"
                android:text="@string/enterDetails"
                android:textSize="@dimen/regularTextSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_LBL_enterDetails"
                android:layout_marginHorizontal="30dp"
                android:orientation="vertical">


                <!--                <com.google.android.material.textfield.TextInputLayout-->
                <!--                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_margin="4dp"-->
                <!--                    android:hint="@string/cat_textfield_label"-->
                <!--                    app:counterEnabled="true"-->
                <!--                    app:counterMaxLength="10"-->
                <!--                    app:errorEnabled="true"-->
                <!--                    app:helperText="@string/cat_textfield_outlined_helper_text"-->
                <!--                    app:helperTextEnabled="true">-->
                <!--                    <com.google.android.material.textfield.TextInputEditText-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"/>-->
                <!--                </com.google.android.material.textfield.TextInputLayout>-->


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperText="הכניסו את שמכם המלא"
                    app:helperTextEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_EDT_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLength="20"

                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperText="מלאו את כתובת המייל כדי שתוכלו לשחזר את הסיסמה"
                    app:helperTextEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_EDT_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperText="מלאו סיסמה בת 6 תווים לפחות"
                    app:helperTextEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_EDT_password"
                        android:layout_width="match_parent"
                        android:layout_height="59dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:textAlignment="viewStart"

                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperText="חזרו על הסיסמה שוב"
                    app:helperTextEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_EDT_passwordValidation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/passwordValidation"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:textAlignment="viewStart" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:helperText="מלאו את שם האירוע"
                    app:helperTextEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_EDT_eventName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/eventName"
                        android:inputType="text"
                        android:maxLength="30" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/register_RB_chooseCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selectCode" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_LYO_userCode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/shareCodeSecretly"
                    android:inputType="text"
                    android:paddingHorizontal="12dp"
                    android:textSize="15sp"
                    android:visibility="gone"
                    app:helperText="הזינו קוד סודי איתו האורחים שלכם יכנסו"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_EDT_userCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="15" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/register_RB_automaticCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="קוד סודי יבחר אוטומית" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_LYO_automaticCode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/shareCodeSecretly"
                    android:inputType="text"
                    android:paddingHorizontal="12dp"
                    android:textSize="15sp"
                    app:helperText="קוד זה ישמש את האורחים לכניסה לאלבום"
                    app:helperTextEnabled="true"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_EDT_automaticCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:maxLength="15" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_BTN_startParty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/startParty" />


                <ProgressBar
                    android:id="@+id/register_PB_progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>